# auto-lab

./: .gitignore  README.md  pyproject.toml
autolab/: __init__.py
autolab/agent/: __init__.py  budget.py  history.py  human_queue.py  loop.py  prompt.py  session.py  sleep.py  system_prompt.md
autolab/configs/: grpo_qwen3_math_c015.yaml  session_c015.yaml
autolab/control_plane/: __init__.py  plane.py  specs.py  types.py
autolab/eval/: evaluator.py
autolab/telemetry/: __init__.py  layer.py  schema.py  trends.py
autolab/trainer_pool/: __init__.py  metrics_hook.py  pause_callback.py  pool.py  runner.py
autolab/training/: __init__.py  callbacks.py  data.py  grpo.py  rewards.py
scripts/: build_replay.py  eval.py  integration_test_cp.py  patch_trl.py  run_session.py  run_training.py
tests/: conftest.py  mock_cp.py  test_agent_loop.py  test_reward_smoke.py
